# cmake_test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Logger.h
modules/CoreModule/: CMakeLists.txt
modules/CoreModule/include/: Calculate.h
modules/CoreModule/src/: Calculate.cpp
modules/LogModule/: CMakeLists.txt
modules/LogModule/include/: Logger.h
modules/LogModule/src/: Logger.cpp
src/: Logger.cpp
